--- a/UserRegistration/src/app/payment-information/payment-information.component.html
+++ b/UserRegistration/src/app/payment-information/payment-information.component.html
@@ -1,17 +1,20 @@
-<div>
-    <h4>Payment Information</h4>
+<div class="formcontainer center">
+    <p class="heading">Payment Information</p>
+    <hr>
     <form [formGroup]="paymentData" #form="ngForm">
         <div class="form-group">
-            <label for="accOwner" class="form-label">Account owner:</label>
+            <label for="accOwner" class="form-label">Account owner</label>
             <input type="text" id="accOwner" name="accOwner" formControlName="accOwner" placeholder="Account Owner"
              required class="form-control">
         </div>
         <div class="form-group">
-            <label for="iban" class="form-label">IBAN:</label>
+            <label for="iban" class="form-label">IBAN</label>
             <input type="text" id="iban" name="iban" formControlName="iban" placeholder="IBAN"
              required  class="form-control ">
         </div>
-        <button type="button" class="btn btn-primary" (click)="previous()">Back</button>
-        <button type="button" class="btn btn-primary" (click)="submit()">Submit</button>
+        <div class="buttonStyle">
+            <button type="button" class="btn btn-secondary" mdbRipple (click)="previous()">Back</button>
+            <button type="button" class="btn btn-primary" mdbRipple (click)="submit()">Submit</button>
+        </div>
     </form>
     </div>
