--- a/UserRegistration/src/app/personal-information/personal-information.component.html
+++ b/UserRegistration/src/app/personal-information/personal-information.component.html
@@ -1,36 +1,32 @@
-<div class="container">
-    <!-- <mat-card>
-        <mat-card-header> 
-            <mat-card-title>Personal Information</mat-card-title>
-        </mat-card-header>
-        <mat-card-content> -->
-        <div class="row">
-        <div class="col-10">   
+<div class="formcontainer center">
+  
+        <p class="heading">Personal Information</p>
+        <hr>
+        
+        <div>   
         <form [formGroup]="personalData" #form="ngForm">
             <div class="form-group">
-                <label for="fname" class="form-label">First Name:</label>
+                <label for="fname" class="form-label">First Name</label>
                 <input type="text" id="fname" name="fname" formControlName="fname"
                  placeholder="First name"
                  required class="form-control">
             </div>
             <div class="form-group">
-                <label for="lname" class="form-label">Last Name:</label>
+                <label for="lname" class="form-label">Last Name</label>
                 <input type="text" id="lname" name="lname" formControlName="lname" 
-                placeholder="Last Name"
+                    placeholder="Last Name"
                  required  class="form-control ">
             </div>
             <div class="form-group">
-                <label for="telephone" class="form-label">Telephone:</label>
+                <label for="telephone" class="form-label">Telephone</label>
                 <input type="number" id="telephone" name="telephone" formControlName="telephone" 
                 placeholder="Telephone Number"
                  required class="form-control ">
             </div>
         </form>
-    <!-- </mat-card-content>
-    <mat-card-footer> -->
-    <button type="button" class="btn btn-primary" (click)="next()">Next</button>
-    <!-- </mat-card-footer>
-    </mat-card> -->
+        <div class="buttonStyle">
+        <button type="button" class="btn btn-primary" mdbRipple (click)="next()">Next</button>
+        </div>
     </div>
-    </div>
+    
 </div>
