--- a/UserRegistration/src/app/success/success.component.html
+++ b/UserRegistration/src/app/success/success.component.html
@@ -1,5 +1,9 @@
-<div>
-    
-    <h4>The user got registered sucessfully!</h4>
-    <!-- <h5>Payment Id : {paymentId} </h5> -->
+<div class="container center"> 
+    <div class="imgClass">
+        <img src="/assets/success-36.svg">   
+    </div>
+        <hr>
+        <p class="heading">User registered successfully</p>
+   
+    <!-- <p>Payment Id : {paymentId} </p> -->
 </div>
