--- a/UserRegistration/src/styles.scss
+++ b/UserRegistration/src/styles.scss
@@ -1,11 +1,46 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #52acbd; }
+
+
+
 .center {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding: 30px;
+}
+.formcontainer{
+    border-radius: 10px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+.heading{
+  font-size: 30px;
+  font-weight: 500;
+}
+.subheading{ 
+  font-size: 14px;
+  font-weight: 500;
+}
+ 
+label{
+  font-size: 18px;
+  font-weight: 500;
+  color: #777171;
+}
+input{
+    width: 100%;
     padding: 10px;
-  }
+    display: inline-block;
+    border-radius: 4px;
+    margin: 11px 0;
+    box-sizing: border-box;
+}
+.buttonStyle{
+  display: flex;
+  justify-content: space-between;
+}
