--- a/UserRegistration/src/app/personal-information/personal-information.component.html
+++ b/UserRegistration/src/app/personal-information/personal-information.component.html
@@ -1,32 +1,53 @@
-<div class="formcontainer center">
-  
-        <p class="heading">Personal Information</p>
-        <hr>
-        
-        <div>   
-        <form [formGroup]="personalData" #form="ngForm">
-            <div class="form-group">
-                <label for="fname" class="form-label">First Name</label>
-                <input type="text" id="fname" name="fname" formControlName="fname"
-                 placeholder="First name"
-                 required class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="lname" class="form-label">Last Name</label>
-                <input type="text" id="lname" name="lname" formControlName="lname" 
-                    placeholder="Last Name"
-                 required  class="form-control ">
-            </div>
-            <div class="form-group">
-                <label for="telephone" class="form-label">Telephone</label>
-                <input type="number" id="telephone" name="telephone" formControlName="telephone" 
-                placeholder="Telephone Number"
-                 required class="form-control ">
-            </div>
-        </form>
-        <div class="buttonStyle">
-        <button type="button" class="btn btn-primary" mdbRipple (click)="next()">Next</button>
+<mat-toolbar color="primary">
+  <span class="fill-remaining-space">User Registration Form</span>
+</mat-toolbar>
+
+
+<div class="col">
+  <mat-card class="center">
+    <mat-card-title>Personal Information</mat-card-title>
+    <mat-divider></mat-divider>
+    <br>
+    <mat-card-content>
+
+      <form class="form" [formGroup]="personalData">
+        <div class="row">
+          <mat-form-field class="form-element" appearance="outline">
+            <mat-label>First Name</mat-label>
+            <input matInput formControlName="fname" required class="form-control" />
+            <mat-error *ngIf="personalData.get('fname')?.hasError('required') && (personalData.get('fname')?.dirty || personalData.get('fname')?.touched)">
+              Full name is required.
+            </mat-error>
+          </mat-form-field>
         </div>
-    </div>
-    
+
+        <div class="row">
+          <mat-form-field class="form-element" appearance="outline" >
+            <mat-label>Last Name</mat-label>
+            <input matInput formControlName="lname" required class="form-control" />           
+          </mat-form-field>
+          <mat-error *ngIf="personalData.get('lname')?.hasError('required') && (personalData.get('lname')?.dirty || personalData.get('lname')?.touched)">
+            Last name is required.
+          </mat-error>
+        </div>
+
+        <div class="row">
+          <mat-form-field class="form-element" appearance="outline">
+            <mat-label>Telephone</mat-label>
+            <input matInput  formControlName="telephone" required class="form-control" />
+            <mat-error *ngIf="personalData.get('telephone')?.hasError('required') && (personalData.get('telephone')?.dirty || personalData.get('telephone')?.touched)">
+              Telephone is required.
+           </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="alignment">
+          <button class="submit-btn" type="submit" mat-raised-button color="primary" [disabled]="!personalData.valid"
+            (click)="goToNextStep()">Next</button>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+
 </div>
+
+
