--- a/UserRegistration/src/app/success/success.component.scss
+++ b/UserRegistration/src/app/success/success.component.scss
@@ -3,3 +3,14 @@ display: flex;
 justify-content: center;
 // width: 30%;
 }
+.textStyling{
+    font-weight: 600;
+    font-size: 30px;
+    letter-spacing: 3px;
+    text-align: center;
+    color: #000000;
+}
+.successPageText{
+    text-align: center;
+    color: #7d7777;
+}
