--- a/UserRegistration/src/app/success/success.component.html
+++ b/UserRegistration/src/app/success/success.component.html
@@ -12,7 +12,7 @@
     <br>
     <div class="successPageText">
         <p class="textStyling">Thank You!</p>
-        <p class="heading">You have successfully registered on our web application. Please <a routerLink="/">click here</a> to explore more. </p>
+        <p class="heading">You have successfully registered on our web application.</p>
     </div>
    
 </mat-card>  
