--- a/UserRegistration/src/app/payment-information/payment-information.component.html
+++ b/UserRegistration/src/app/payment-information/payment-information.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
     <span class="fill-remaining-space">User Registration Form</span>
 </mat-toolbar>
+<ngx-spinner type="ball-clip-rotate" [fullScreen] = "true"  color = "#ffffff"  size="medium">Loading..</ngx-spinner>
 
 <div class="col">
     <mat-card class="center">
@@ -31,8 +32,7 @@
                     </mat-form-field>
                 </div>
                 <div class="alignment">
-                    <button class="submit-btn" mat-raised-button color="accent"
-                        (click)="goToPreviousStep()">Previous</button>
+                  
                     <button class="submit-btn" type="submit" mat-raised-button color="primary"
                         [disabled]="!paymentDetail.valid" (click)="submitForm()">Submit</button>
                 </div>
