Added styling changes.

--- a/UserRegistration/src/app/personal-information/personal-information.component.html
+++ b/UserRegistration/src/app/personal-information/personal-information.component.html
@@ -2,7 +2,7 @@
   <span class="fill-remaining-space">User Registration Form</span>
 </mat-toolbar>
 
-<ngx-spinner type="ball-clip-rotate" [fullScreen] = "true"  color = "#ffffff" size="medium">Loading..</ngx-spinner>
+<ngx-spinner type="ball-clip-rotate" [fullScreen] = "true"  size="medium"></ngx-spinner>
 
 <div class="col">
   <mat-card class="center">
