--- a/UserRegistration/src/app/address-information/address-information.component.html
+++ b/UserRegistration/src/app/address-information/address-information.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
     <span class="fill-remaining-space">User Registration Form</span>
 </mat-toolbar>
-<ngx-spinner type="ball-clip-rotate" [fullScreen] = "true"  color = "#ffffff"  size="medium">Loading..</ngx-spinner>
+<ngx-spinner type="ball-clip-rotate" [fullScreen] = "true"  size="medium"></ngx-spinner>
 
 <div class="col">
     <mat-card class="center">
